@@ -30,8 +30,8 @@ public class ConstantTest extends TestCase {
                 "  component XOR_GATE_2\n" +
                 "    port (\n" +
                 "      PORT_out: out std_logic;\n" +
-                "      PORT_a: in std_logic;\n" +
-                "      PORT_b: in std_logic );\n" +
+                "      PORT_In_1: in std_logic;\n" +
+                "      PORT_In_2: in std_logic );\n" +
                 "  end component;\n" +
                 "\n" +
                 "  signal S0: std_logic;\n" +
@@ -40,8 +40,8 @@ public class ConstantTest extends TestCase {
                 "  gate0 : XOR_GATE_2\n" +
                 "    port map (\n" +
                 "      PORT_out => PORT_Y,\n" +
-                "      PORT_a => PORT_A,\n" +
-                "      PORT_b => S0 );\n" +
+                "      PORT_In_1 => PORT_A,\n" +
+                "      PORT_In_2 => S0 );\n" +
                 "end main_arch;\n" +
                 "\n" +
                 "-- library components\n" +
@@ -54,13 +54,13 @@ public class ConstantTest extends TestCase {
                 "entity XOR_GATE_2 is\n" +
                 "  port (\n" +
                 "    PORT_out: out std_logic;\n" +
-                "    PORT_a: in std_logic;\n" +
-                "    PORT_b: in std_logic );\n" +
+                "    PORT_In_1: in std_logic;\n" +
+                "    PORT_In_2: in std_logic );\n" +
                 "end XOR_GATE_2;\n" +
                 "\n" +
                 "architecture XOR_GATE_2_arch of XOR_GATE_2 is\n" +
                 "begin\n" +
-                "  PORT_out <= PORT_a XOR PORT_b;\n" +
+                "  PORT_out <= PORT_In_1 XOR PORT_In_2;\n" +
                 "end XOR_GATE_2_arch;\n", vhdl);
     }
 
@@ -85,8 +85,8 @@ public class ConstantTest extends TestCase {
                 "    generic ( bitCount : integer );\n" +
                 "    port (\n" +
                 "      PORT_out: out std_logic_vector ((bitCount-1) downto 0);\n" +
-                "      PORT_a: in std_logic_vector ((bitCount-1) downto 0);\n" +
-                "      PORT_b: in std_logic_vector ((bitCount-1) downto 0) );\n" +
+                "      PORT_In_1: in std_logic_vector ((bitCount-1) downto 0);\n" +
+                "      PORT_In_2: in std_logic_vector ((bitCount-1) downto 0) );\n" +
                 "  end component;\n" +
                 "\n" +
                 "  signal S0: std_logic_vector (2 downto 0);\n" +
@@ -96,8 +96,8 @@ public class ConstantTest extends TestCase {
                 "    generic map ( bitCount => 3)\n" +
                 "    port map (\n" +
                 "      PORT_out => PORT_Y,\n" +
-                "      PORT_a => PORT_A,\n" +
-                "      PORT_b => S0 );\n" +
+                "      PORT_In_1 => PORT_A,\n" +
+                "      PORT_In_2 => S0 );\n" +
                 "end main_arch;\n" +
                 "\n" +
                 "-- library components\n" +
@@ -111,13 +111,13 @@ public class ConstantTest extends TestCase {
                 "  generic ( bitCount : integer );\n" +
                 "  port (\n" +
                 "    PORT_out: out std_logic_vector ((bitCount-1) downto 0);\n" +
-                "    PORT_a: in std_logic_vector ((bitCount-1) downto 0);\n" +
-                "    PORT_b: in std_logic_vector ((bitCount-1) downto 0) );\n" +
+                "    PORT_In_1: in std_logic_vector ((bitCount-1) downto 0);\n" +
+                "    PORT_In_2: in std_logic_vector ((bitCount-1) downto 0) );\n" +
                 "end XOR_GATE_BUS_2;\n" +
                 "\n" +
                 "architecture XOR_GATE_BUS_2_arch of XOR_GATE_BUS_2 is\n" +
                 "begin\n" +
-                "  PORT_out <= PORT_a XOR PORT_b;\n" +
+                "  PORT_out <= PORT_In_1 XOR PORT_In_2;\n" +
                 "end XOR_GATE_BUS_2_arch;\n", vhdl);
     }
 
